# mlb-data-db-fabric

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  app.py  check_bronze.py  duck.py  pyproject.toml  requirements.txt  test_view.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: nightly-incremental.yml
html/: MLB Scores — May 2, 2026.html
migrations/: migrate.py
pages/: 1_Standings.py  2_Games.py  3_Head_to_Head.py  4_Teams.py  5_Players.py  6_Leaders.py  7_Player_Profile.py
scripts/: create_measures.py  explore_api.py  install_nssm_service.ps1  populate_game_batting.py  pretty_print_raw_json.py  register_scheduler_task.ps1  start_scheduler.ps1
sql/gold/: 001_dim_player.sql  002_dim_team.sql  003_dim_venue.sql  004_fact_game.sql  005_head_to_head.sql  006_leaderboards.sql  007_player_season_summary.sql  008_standings_snap.sql  009_league_averages.sql
sql/schema/: 001_initial_schema.sql  002_standings_snap_pk.sql  003_add_pitcher_decisions.sql  004_game_batting.sql  005_game_pitching.sql  006_gold_tables.sql  007_fact_batting.sql
sql/silver/: 001_seed_seasons.sql  002_leagues.sql  003_divisions.sql  004_venues.sql  005_teams.sql  006_players.sql  007_games.sql  008_game_linescore.sql  009_game_boxscore.sql  010_fact_stubs.sql  011_fact_batting.sql
src/: connections.py  logging_config.py
src/aggregator/: aggregate.py
src/extractor/: backfill.py  client.py  extract.py  writer.py
src/run_tracker/: tracker.py
src/scheduler/: jobs.py
src/transformer/: game_batting.py  game_pitching.py  staging.py  transform.py
tests/: conftest.py
tests/integration/: test_aggregate.py  test_jobs.py  test_leaders_page.py  (+3 more)
(+7 files in other folders)
